missions, shop, extars,  gameplan completed

--- a/src/Components/sec_nav/sec_nav.css
+++ b/src/Components/sec_nav/sec_nav.css
@@ -20,6 +20,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 20px;
+    cursor: pointer;
 }
 .nav-2-item-box.active{
     background-color: #828387;
